# EdgeLearning

./: .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codecov.yml  unix.yml  windows.yml
cmake/: FindAriadne.cmake
data/: .gitignore  README.md  execution-time.csv
doc/: README.md  doc.tex
doc/chapters/: chapter01introduction.tex  chapter02requirements.tex  chapter03deeplearning-lib-analysis.tex  chapter04implementation-details.tex  chapter05conclusion.tex
example/: CMakeLists.txt  README.md  custom_loss.cpp  mnist_dense.cpp  regression.cpp  simple_classification.cpp  simple_regression.cpp  util.hpp
example/high_level_interface/: CMakeLists.txt  hl_regression.cpp
example/low_level_interface/: CMakeLists.txt  ll_classification.cpp  ll_regression.cpp
profile/: CMakeLists.txt  profile.hpp  profile_dataset.hpp  profile_dense.cpp  profile_fnn.cpp  profile_fnn.hpp  profile_fnn_classification.cpp  profile_fnn_regression.cpp  stopwatch.hpp
python/: .gitignore  CMakeLists.txt
python/example/: CMakeLists.txt  mnist_dense.py  simple_classification.py  simple_regression.py
python/source/: CMakeLists.txt  data_submodule.cpp  data_submodule.hpp  dnn_submodule.cpp  dnn_submodule.hpp  edgelearning_module.cpp  parser_submodule.cpp  parser_submodule.hpp
python/tests/: CMakeLists.txt  test_data.py  test_dnn.py  test_fnn.py  test_import.py  test_parser.py
source/: CMakeLists.txt  ariadnedl.hpp  edge_learning.hpp  replaceme.cpp  replaceme.hpp  type.hpp
source/data/: dataset.hpp  path.hpp
source/dnn/: CMakeLists.txt  activation.cpp  activation.hpp  adam_optimizer.cpp  adam_optimizer.hpp  avg_pooling.cpp  avg_pooling.hpp  cce_loss.cpp  cce_loss.hpp  concatenate.cpp  concatenate.hpp  convolutional.cpp  convolutional.hpp  dense.cpp  dense.hpp  dlgraph.cpp  dlgraph.hpp  dlmath.hpp  dlmath.i.hpp  dropout.cpp  dropout.hpp  feedforward.cpp  feedforward.hpp  gd_optimizer.cpp  gd_optimizer.hpp  layer.cpp  layer.hpp  loss.cpp  loss.hpp  max_pooling.cpp  max_pooling.hpp  model.cpp  model.hpp  mse_loss.cpp  mse_loss.hpp  optimizer.cpp  optimizer.hpp  pooling.cpp  pooling.hpp  recurrent.cpp  (+2 more)
source/estimators/: CMakeLists.txt  time_estimator.cpp  time_estimator.hpp
source/middleware/: CMakeLists.txt  dataset.hpp  definitions.hpp  feed_forward.cpp  feed_forward.hpp  ffnn.cpp  ffnn.hpp  fnn.cpp  fnn.hpp  layer_descriptor.cpp  layer_descriptor.hpp  mlpack_definitions.hpp  mlpack_fnn.hpp  mlpack_type.hpp  nn.hpp  rnn.cpp  type.hpp
source/parser/: CMakeLists.txt  cifar.hpp  csv.cpp  csv.hpp  json.hpp  mnist.hpp  parser.cpp  parser.hpp  type_checker.hpp
submodules/: CMakeLists.txt
submodules/concmanager/: CMakeLists.txt
submodules/concmanager/include/: task_manager.hpp  thread.hpp  thread_pool.hpp  typedefs.hpp
submodules/concmanager/src/: CMakeLists.txt  task_manager.cpp  thread.cpp  thread_pool.cpp
tests/: CMakeLists.txt  test.hpp  test_csv.cpp  test_dnn.cpp  test_estimators.cpp  test_parser.cpp  test_replaceme.cpp
tests/data/: CMakeLists.txt  test_dataset.cpp
tests/dnn/: CMakeLists.txt  dlmath.py  test_activation.cpp  test_adam_optimizer.cpp  test_avg_pooling.cpp  test_cce_loss.cpp  test_convolutional.cpp  test_dense.cpp  test_dlgraph.cpp  test_dlmath.cpp  test_dropout.cpp  test_gd_optimizer.cpp  test_layer.cpp  test_loss.cpp  test_max_pooling.cpp  test_model.cpp  test_mse_loss.cpp  test_optimizer.cpp  test_recurrent.cpp
tests/middleware/: CMakeLists.txt  test_dataset.cpp  test_ffnn.cpp  test_fnn.cpp  test_layer_descriptor.cpp
tests/parser/: CMakeLists.txt  test_cifar.cpp  test_csv.cpp  test_json.cpp  test_mnist.cpp  test_parser.cpp  test_type_checker.cpp
tests/parser/resource/: first10-t10k-images-idx3-ubyte
tests/parser/resource/mnist/: first10-train-images-idx3-ubyte  first10-train-labels-idx1-ubyte
tool/: .gitignore  plot_profile_dense.py  plot_profile_fnn.py  profile_plot.py  requirements.txt
tool/dnn/: device.py  mnist.py
